# imf

./: .gitignore  .gitmodules  README.md
boards/: README.md
boards/esp32-s3-main/: esp32-board-BOM.csv  esp32-board.kicad_pcb  esp32-board.kicad_pro  esp32-board.kicad_sch  esp32-system.kicad_sch  peripherals.kicad_sch  power.kicad_sch
boards/esp32-s3-simple/: esp32-s3-simple-bom.csv  esp32-s3-simple.kicad_pcb  esp32-s3-simple.kicad_prl  esp32-s3-simple.kicad_pro  esp32-s3-simple.kicad_sch  esp32-system.kicad_sch  power.kicad_sch
distance-analysis/: README.md  ftm_stat.ipynb
distance-analysis/esp32-s3-data/: ftm_main_10m.csv  ftm_main_12m.csv  ftm_main_14m.csv  ftm_main_16m.csv  ftm_main_18m.csv  ftm_main_1m.csv  ftm_main_20m.csv  ftm_main_2m.csv  ftm_main_3m.csv  ftm_main_4m.csv  ftm_main_5m.csv  ftm_main_6m.csv  ftm_main_7m.csv  ftm_main_8m.csv  ftm_main_9m.csv  ftm_raw_10m.csv  ftm_raw_12m.csv  ftm_raw_14m.csv  ftm_raw_16m.csv  ftm_raw_18m.csv  ftm_raw_1m.csv  ftm_raw_20m.csv  ftm_raw_2m.csv  (+7 more)
graph-tests/: README.md  compare-attrs.sh  input2.dot  input3.dot  simulation-independent-input2.py  simulation-independent-input3.py  simulation-independent.py
mesh-visualizer/: README.md  colorbutton.py  mainwindow.ui  node_editor.ui  pyside-visualizer.py  pyside_visualizer.py  requirements.txt  settingsdialog.ui  ui_mainwindow.py  ui_node_editor.py  ui_settingsdialog.py  visualizer.py  visualizer_common.py  visualizer_nodeeditor.py  visualizer_settingdialog.py
result/: README.md  finding-color-mobile-path-0011-komentar.md  log_parser.py  parse_logs.sh  plot-locations.ipynb  requirements.txt
src/: Doxyfile  README.md
src/common-components/graphviz/: CMakeLists.txt
src/common-components/graphviz/neato_esp/: neato_esp.c  neato_esp.h
src/common-components/interactive-mesh-framework/: CMakeLists.txt  Kconfig  graph_localization.cpp  interactive-mesh-framework.cpp  location_common.c  location_topology.cpp  mlat_localization.cpp
src/common-components/interactive-mesh-framework/include/: graph_localization.hpp  imf-device.hpp  interactive-mesh-framework.hpp  localization.hpp  location_common.h  location_defs.h  location_topology.hpp  mlat_localization.hpp
src/common-components/ota/: CMakeLists.txt  ota.c
src/common-components/ota/include/: ota.h
src/common-components/web_config/: CMakeLists.txt  Kconfig  http_common.c  web_config.c
src/common-components/web_config/include/: http_common.h  web_config.h
src/common-components/web_config/web/: index.html
(+204 files in other folders)
